# realworld-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  dbschema.sql  dev.docker-compose.yml  dev.dockerfile  docker-compose.yml  idempotency-draft.md  readme.md  rust-toolchain.toml  script.sh
docs/: open_api.yml  openapi.main.yml
docs/blog/: article.id.tags.yml  article.id.version.id.yml  article.id.version.yml  article.id.yml  article.operation.yml  article.yml  comment.operation.yml  favorite.operation.yml  profile.follow.id.yml  profile.follow.yml  profile.id.yml  profile.operation.yml  profile.yml  resource.yml  response.yml  vote.operation.yml
docs/component/: error.yml  parameter.yml  response.yml  schema.yml  security.yml
docs/iam/: auth.yml  resource.yml  response.yml  user.id.yml  user.me.yml  user.operation.yml  user.yml
script/: api-docs  bundle-api-docs.sh  lint.sh  serve-api-docs.sh  start-dev.sh
src/: app.rs  base.rs  config.rs  domain.rs  error.rs  infra.rs  main.rs
src/app/: mod.rs  resource.rs  use_case.rs
src/domain/: mod.rs  service.rs  transform.rs
src/domain/datatype/: mod.rs  password.rs  security.rs
src/domain/entity/: iam.rs  mod.rs
src/infra/: controller.rs  database.rs  error.rs  mod.rs  service.rs
tests/: user.rs
tests/setup/: mod.rs
