[package]
name = "realworld_backend"
version = "0.1.0"
edition = "2021"
authors = ["Caio Oliveira <caio.vsoliveira23@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "conduit_api"
path = "src/main.rs"

[features]
default = []

[dependencies]
salvo = { version = "0.37.0", features = ["logging"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
serde = { version = "1.0.143", features = ["derive"] }

pg-tokio = { package = "tokio-postgres", version = "0.7.7", features = ["array-impls", "with-chrono-0_4", "with-uuid-1"] }
pg-pool = { package = "deadpool-postgres", version = "0.10.2" }

sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "tls", "postgres", "uuid", "chrono"] }

futures = { version = "0.3.25" }

rustls = "0.20.6"
webpki-roots = "0.22.4"

uuid = { version = "1.2.1", features = ["v4", "serde"] }
url = { version = "2.3.1", features = ["serde"] }
chrono = { version = "0.4.22", features = ["serde", "clock"] }

tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = "0.3.16"
async-trait = "0.1.57"
derive_more = "0.99.17"
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"

[dev-dependencies]
dotenv = { version = "0.15.0" }
serial_test = { version = "0.9.0" }

reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "json", "brotli", "gzip"] }
